# vacation-price-tracker

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp-review.yml  .npmrc  CLAUDE.md  README.md  SECURITY_AUDIT.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties
.claude/commands/: validate.md
.claude/hooks/: session-start.sh
.claude/skills/bug-fixing/: SKILL.md
.claude/skills/creating-prs/: SKILL.md
.claude/skills/debug-web/: SKILL.md
.claude/skills/debugging-prod/: SKILL.md
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: build-prod-images.yml  ci.yml  deploy.yml  mobile-deploy.yml  mobile-e2e.yml  mobile.yml  nextjs-build.yml  nextjs-security.yml  nextjs.yml  prune-ghcr.yml  python-build.yml  python-security.yml  python.yml  security.yml  server.yml  sonarqube.yml  web.yml
.superpowers/sdd/: ci-refactor-report.md
apps/api/: CLAUDE.md  Dockerfile  docker-entrypoint.sh  main.py  project.json  run_ssl.py
apps/api/app/: __init__.py  main.py
apps/api/app/clients/: __init__.py  amadeus.py  amadeus_mock.py  axiom_query.py  email.py  fast_flights.py  fast_flights_parser.py  flight_provider.py  google_flights.py  groq.py  kiwi.py  kiwi_mcp.py  lastminute_mcp.py  skiplagged.py  skiplagged_mock.py  skiplagged_parser.py
apps/api/app/core/: admin_query.py  admins.py  airlines.py  app_settings.py  auth_allowlist.py  cache_keys.py  config.py  constants.py  errors.py  feature_flags.py  google_verify.py  observability.py  prompts.py  quota.py  security.py  telemetry.py
apps/api/app/db/: session.py  temporal.py
apps/api/app/middleware/: conversation_limits.py  csrf.py  idempotency.py  rate_limit.py  security_headers.py
apps/api/app/models/: __init__.py  app_setting.py  conversation.py  device_token.py  feature_flag.py  message.py  notification_outbox.py  notification_rule.py  price_snapshot.py  trip.py  trip_prefs.py  user.py
apps/api/app/routers/: admin.py  app_settings.py  auth.py  chat.py  device_tokens.py  feature_flags.py  locations.py  notifications.py  sse.py  telemetry.py  trips.py  users.py
apps/api/app/schemas/: __init__.py  base.py  chat.py  conversation.py  device_token.py  flight_search.py  hotel_search.py  location.py  mcp.py  skiplagged.py  trip.py
apps/api/app/services/: audit_log.py  chat.py  conversation.py  email_render.py  flight_provider.py  (+5 more)
apps/api/migrations/: env.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_admin_flags.py  test_admin_settings.py  test_admin_sql.py  test_amadeus_client.py  test_app_settings.py  test_auth.py  test_auth_allowlist.py  test_auth_mobile.py  test_cache_keys.py  test_conversation.py  test_db_deps.py  test_device_tokens.py  test_errors.py  test_feature_flags.py  test_google_verify.py  test_groq_client.py  test_idempotency_middleware.py  test_locations.py  test_main.py  test_models.py  test_prompts.py  test_quota.py  test_rate_limit_middleware.py  test_schemas.py  test_security.py  test_security_headers.py  test_telemetry.py  test_temporal_db.py  test_temporal_service.py  test_trip_schemas.py  test_trips.py
apps/mobile/: .eslintrc.js  .gitignore  CLAUDE.md  app.config.ts  eas.json  eslint.config.js  expo-env.d.ts  metro.config.js  package.json  project.json  tsconfig.json
apps/mobile/app/: +native-intent.tsx  _layout.tsx  settings.tsx
apps/mobile/components/: screen-stub.tsx
apps/mobile/e2e/: config.yaml
apps/mobile/lib/: airports-data.ts  aurora.ts  chat-stream.ts  env.ts  fonts.ts  locations.ts  notifications.ts  telemetry.ts  trip-edit.ts  trip-form.ts
apps/web/: CLAUDE.md  Dockerfile  biome.json  jest.config.ts  jest.setup.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  project.json  server.js  tailwind.config.ts  tsconfig.json
apps/web/e2e/: auth.setup.ts  chat-flight-search.spec.ts  chat-hotel-search.spec.ts  debug-route.spec.ts  theme-validation.spec.ts  track-prefs-hotel-city.spec.ts  trip-creation-refresh.spec.ts
apps/web/src/: middleware.ts
apps/worker/: CLAUDE.md  Dockerfile  project.json
apps/worker/tests/: conftest.py  test_expo_push.py  test_health_check_activity.py  test_main.py  test_mcp_client.py  test_notifications_activities.py  test_price_check_activities.py  test_push_activity.py  test_schedule_bootstrap.py  test_schedule_cron.py  test_scheduled_refresh.py  test_send_daily_digests.py  test_trips_activity.py  test_workflows.py
apps/worker/worker/: __main__.py  schedule_bootstrap.py  types.py  wf_logging.py
certs/: README.md
doc/: API_SPEC.md  DESIGN_OVERVIEW.md  DEVELOPMENT_SETUP.md  MCP_ROUTER_ARCHITECTURE.md  MCP_SERVER_SETUP.md  PHASE_1_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PROJECT_PLAN.md
doc/ai-conversations/: 2026-01-11-phase-1_1-1_2.txt  2026-01-12-phase-1_3.txt
doc/phased-plans/: PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md
doc/research/: MCP_FLIGHT_SERVERS.md
docs/: API_SPEC.md  DEPLOYMENT.md  DESIGN_OVERVIEW.md  GUARDRAILS.md  MCP_ROUTER_ARCHITECTURE.md  PRICING_ESTIMATES.md  PROJECT_PLAN.md  SECURITY.md  mobile-cicd.md
docs/design/aurora/: Price Tracker - Aurora - Dark.html  Price Tracker - Aurora.dc.html  README.md
docs/phased-plans/: PHASE_2_PLAN.md  PHASE_3_PLAN.md
docs/specs/operations/: axiom-map-fields.md
docs/superpowers/plans/: 2026-04-15-skiplagged-migration.md  2026-04-19-track-prefs-and-hotel-city.md  2026-06-23-AURORA-INDEX.md  2026-06-23-mobile-backend.md  2026-06-23-mobile-cicd.md  2026-06-23-mobile-foundation.md  2026-06-23-mobile-screens.md  2026-06-23-web-aurora.md
docs/superpowers/specs/: 2026-04-15-skiplagged-migration-design.md
infra/: docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: bump-mobile-version.mjs  check-env.sh  dev.sh  lcov-reroot.mjs  mobile-deploy-failure-email.sh  prod-axiom.mjs  prod-query.mjs  setup-runner-android.sh  sonar-coverage-check.mjs  sonar-local.sh  verify.sh
scripts/__tests__/: bump-mobile-version.test.mjs
(+330 files in other folders)
