[project]
name = "vacation-price-tracker"
version = "0.1.0"
description = "Vacation Price Tracker - Full Stack Application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "sqlmodel",
    "asyncpg",
    "alembic",
    "temporalio",
    "authlib>=1.6.12",
    "httpx",
    "pyjwt>=2.10.1",
    "uvicorn",
    "redis>=5.0.0",
    "pydantic-settings>=2.14.2",
    "greenlet",
    "itsdangerous",
    "jinja2",
    # Pinned for known CVEs (transitive); see `pnpm verify` audit step
    "cryptography>=48.0.1",
    "msgpack>=1.2.1",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "mako>=1.3.12",
    "fast-flights>=0.5.0",
    "groq>=0.11.0",
    "tiktoken>=0.7.0",
    "langfuse>=2.60,<3",
    "axiom-py>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio",
    "pytest-cov",
    "aiosqlite",
    "ruff",
    "pip-audit",
    # Pinned for known CVEs flagged by the pip-audit step
    "pip>=26.1.2",
    "pydevd-pycharm~=253.29346.308",
    "croniter>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle errors
# F: pyflakes
# I: isort (import sorting)
# W: pycodestyle warnings
# UP: pyupgrade (modern Python syntax)
# B: flake8-bugbear (common bugs)
# C90: mccabe (complexity)
select = ["E", "F", "I", "W", "UP", "B", "C90"]

# Ignore specific rules that are too strict
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["E712"]  # Allow `== None` in tests for clarity

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/worker/tests"]
markers = [
    "integration: tests that require an external service (e.g., Temporal dev server). Excluded from the default run; enable with `-m integration`.",
]
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["apps/api/app"]
# SQLAlchemy async runs DB work in a greenlet; without this, lines that resume
# after an `await session.execute(...)` are not traced and show as uncovered.
concurrency = ["greenlet", "thread"]
omit = [
    "apps/api/app/models/*",      # Models tested via integration tests
    "apps/api/migrations/*",       # Migration files don't need coverage
    "apps/api/app/__init__.py",
    "apps/api/app/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
